# agoramesh

./: .gitignore  Cargo.toml  README.md  dev
.github/workflows/: ci.yml
crates/agoramesh-cli/: Cargo.toml
crates/agoramesh-cli/src/: config.rs  keyring.rs  lib.rs  main.rs  peers.rs
crates/agoramesh-cli/src/commands/: category.rs  comment.rs  feed.rs  helpers.rs  key.rs  mod.rs  peer.rs  post.rs  run.rs  sync.rs
crates/agoramesh-cli/src/keyring/: crypto.rs  files.rs  schema.rs
crates/agoramesh-cli/tests/: config.rs  key.rs  keyring_structure.rs  phase1_cli.rs  phase1_e2e.rs
crates/agoramesh-core/: Cargo.toml
crates/agoramesh-core/src/: canonical.rs  identity.rs  lib.rs  message.rs
crates/agoramesh-core/src/objects/: acceptance.rs  category.rs  category_id.rs  comment.rs  mod.rs  post.rs  projection.rs  revocation_certificate.rs  user_profile.rs  validation.rs
crates/agoramesh-core/tests/: objects_phase1.rs  validation_phase1.rs
crates/agoramesh-net/: Cargo.toml
crates/agoramesh-net/src/: direct_sync.rs  lib.rs  node.rs  topic.rs  transport.rs
crates/agoramesh-net/tests/: direct_sync.rs
crates/agoramesh-store/: Cargo.toml
crates/agoramesh-store/src/: db.rs  lib.rs  schema.sql  store.rs
crates/agoramesh-tui/: Cargo.toml
crates/agoramesh-tui/src/: app.rs  app_state.rs  app_tests.rs  backend.rs  compose.rs  controller.rs  error.rs  events.rs  feed.rs  first_seen.rs  key_ux.rs  lib.rs  main.rs  models.rs  render.rs  subscriptions.rs  sync_status.rs  terminal.rs  terminal_tests.rs  thread.rs
crates/agoramesh-tui/src/backend/: content.rs  content_tests.rs  file_io.rs  key_mgmt.rs  local_state.rs  peers.rs
crates/agoramesh-tui/src/controller/: compose.rs  key_mgmt.rs  mod.rs  navigation.rs
crates/agoramesh-tui/tests/: controller_flows.rs  feed_post_thread.rs  key_management_flows.rs  smoke_tui.rs  subscriptions_key_warning.rs
crates/agoramesh-tui/tests/support/: mod.rs
docs/: A플러스플러스플러스_추가_보강안_정리.md  CHECKPOINT-2026-06-25.md  README.md  agoramesh-a-plus-additions.md  agoramesh-design-notes.md  legal-preliminary-phase-0-3.md  v1.0-roadmap-revised.md  v1.0-roadmap.md
docs/adr/: 0001-object-serialization.md  0003-network-transport.md  0005-client-stack.md  0006-envelope-signatures.md  0007-text-node-spam-defense.md  0008-gossip-topic-and-timestamp-policy.md
docs/archive/: A플러스플러스_추가_보강안_정리.md  idea.txt
docs/checkpoints/: 2026-06-25-phase1-completion.md  2026-06-26-phase2-tui-plan.md  2026-06-27-phase2-completion.md
docs/specs/: category-id.md  data-objects.md  message-exchange.md  report-bundle.md
