[package]
name = "agoramesh-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
agoramesh-core = { path = "../agoramesh-core" }
agoramesh-store = { path = "../agoramesh-store" }
agoramesh-net = { path = "../agoramesh-net" }
clap = { version = "4", features = ["derive", "env", "wrap_help", "color", "unicode"] }
color-eyre = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "process", "signal"] }
indicatif = { version = "0.17", features = ["tokio"] }
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
console = "0.15"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
pretty_assertions = "1"
