[package]
name = "agoramesh-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
agoramesh-core = { path = "../agoramesh-core" }
agoramesh-store = { path = "../agoramesh-store" }
agoramesh-net = { path = "../agoramesh-net" }
clap = { version = "4", features = ["derive", "env", "wrap_help", "color", "unicode"] }
color-eyre = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "process", "signal"] }
indicatif = { version = "0.17", features = ["tokio"] }
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
console = "0.15"
argon2 = "0.5"
base64 = "0.22"
chacha20poly1305 = { version = "0.10", features = ["rand_core"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zeroize = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
url = "2"
hex = "0.4"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
pretty_assertions = "1"
reqwest = { version = "0.12", features = ["json"] }
