[package]
name = "agoramesh-net"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
agoramesh-core = { path = "../agoramesh-core" }
agoramesh-store = { path = "../agoramesh-store" }
axum = "0.8"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "time"] }
tokio-util = { version = "0.7", features = ["codec"] }
quinn = "0.11"
rustls = { version = "0.23", features = ["ring"] }
rcgen = "0.13"
thiserror = "2"
tracing = "0.1"

[dev-dependencies]
chrono = { version = "0.4", features = ["serde", "std", "clock"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "sync", "time"] }
pretty_assertions = "1"
