[package]
name = "agoramesh-store"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
agoramesh-core = { path = "../agoramesh-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.34", features = ["bundled", "serde_json"] }
thiserror = "2"
chrono = { version = "0.4", features = ["serde", "std", "clock"] }

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1"
agoramesh-core = { path = "../agoramesh-core", features = ["test-helpers"] }
