[package]
name = "agoramesh-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Minimal terminal UI for AgoraMesh Phase 2."
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
agoramesh-core = { path = "../agoramesh-core" }
agoramesh-store = { path = "../agoramesh-store" }
agoramesh-net = { path = "../agoramesh-net" }
agoramesh-cli = { path = "../agoramesh-cli" }
ratatui = "0.30"
crossterm = "0.29"
clap = { version = "4", features = ["derive", "env", "wrap_help", "color", "unicode"] }
color-eyre = "0.6"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde", "std", "clock"] }
hex = "0.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
pretty_assertions = "1"
